--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   },
   "scripts": {
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "lint": "eslint . --cache",
+    "format": "prettier -w \"**/*.{ts,js,json,scss,css}\"",
+    "format-check": "prettier -c \"src/**{ts,js,json,scss,css}\""
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "eslint": "^8.19.0",
     "jest": "^28.1.2",
+    "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4"
