--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "identity-manager",
-  "version": "0.1.0",
+  "version": "0.0.0-development",
   "description": "IdentityManager is a high level abstraction of the IOTA Identity Framework which simplifies a lot of Identity Related tasks",
   "main": "index.js",
   "repository": "https://github.com/Tangle-Labs/identity-manager",
@@ -16,7 +16,8 @@
     "coverage": "jest --coverage",
     "lint": "eslint . --cache",
     "format": "prettier -w \"**/*.{ts,js,json,scss,css}\"",
-    "format-check": "prettier -c \"src/**{ts,js,json,scss,css}\""
+    "format-check": "prettier -c \"src/**{ts,js,json,scss,css}\"",
+    "semantic-release": "semantic-release --branches main"
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
@@ -28,6 +29,7 @@
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
     "tslint": "^6.1.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "semantic-release": "^19.0.3"
   }
 }
