Chore/GitHub setup (#2)
* feat: added github stuff

* feat: added format and lint stuff

* feat: add format and lint worflow

* feat: added build check workflow

* feat: add semantic release

* feat: add release toolchain

* fix: add secrets to workflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "identity-manager",
-  "version": "0.1.0",
+  "version": "0.0.0-development",
   "description": "IdentityManager is a high level abstraction of the IOTA Identity Framework which simplifies a lot of Identity Related tasks",
   "main": "index.js",
   "repository": "https://github.com/Tangle-Labs/identity-manager",
@@ -11,15 +11,25 @@
     "@iota/identity-wasm": "^0.6.0"
   },
   "scripts": {
+    "build": "tsc",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "lint": "eslint . --cache",
+    "format": "prettier -w \"**/*.{ts,js,json,scss,css}\"",
+    "format-check": "prettier -c \"src/**{ts,js,json,scss,css}\"",
+    "semantic-release": "semantic-release --branches main"
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "eslint": "^8.19.0",
     "jest": "^28.1.2",
+    "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
     "tslint": "^6.1.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "semantic-release": "^19.0.3"
   }
 }
