feat: add new release commit

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,8 @@
 name: "Publish Package"
 
 on:
-  push:
-    branches:
-      - "main"
+  release:
+    types: [created]
 
 jobs:
   test:
@@ -49,21 +48,32 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [test-build, test]
-
     steps:
-      - uses: actions/checkout@v2
+      # Checkout the exact commit tagged on the release.
+      - name: Checkout repo
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.release.target_commitish }}
 
-      - name: Setup Node.js
+      - name: Validate and extract release information
+        id: release
+        uses: manovotny/github-releases-for-automated-package-publishing-action@v1.0.0
+
+      - name: Set node version
         uses: actions/setup-node@v2
         with:
-          node-version: 16.x
+          always-auth: true
+          node-version: "12.x"
+          registry-url: "https://registry.npmjs.org"
 
-      - name: Install Dependencies
-        run: yarn
-
-      - name: Test
-        run: yarn semantic-release
+      - name: Publish tagged version
+        if: steps.release.outputs.tag != ''
+        run: yarn publish --new-version ${{ steps.release.outputs.version }} --tag ${{ steps.release.outputs.tag }} --access public
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish version
+        if: steps.release.outputs.tag == ''
+        run: yarn publish --new-version ${{ steps.release.outputs.version }} --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
