--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,6 +48,8 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    needs: [test-build, test]
+
     steps:
       # Checkout the exact commit tagged on the release.
       - name: Checkout repo
