fix: broken config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@tanglelabs/identity-manager",
   "version": "0.0.0-development",
   "description": "IdentityManager is a high level abstraction of the IOTA Identity Framework which simplifies a lot of Identity Related tasks",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/Tangle-Labs/identity-manager",
   "author": "Merul <merul@tanglelabs.io>",
   "license": "GPL-2.0",
