--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "GPL-2.0",
   "dependencies": {
     "@iota/identity-stronghold-nodejs": "^0.6.0",
-    "@iota/identity-wasm": "^0.6.0"
+    "@iota/identity-wasm": "^0.6.0",
+    "@types/jsdoc-to-markdown": "^7.0.3"
   },
   "scripts": {
     "build": "tsc",
@@ -27,10 +28,11 @@
     "@typescript-eslint/parser": "^5.30.3",
     "eslint": "^8.19.0",
     "jest": "^28.1.2",
+    "jsdoc-to-markdown": "^7.1.1",
     "prettier": "^2.7.1",
+    "semantic-release": "^19.0.3",
     "ts-jest": "^28.0.5",
     "tslint": "^6.1.3",
-    "typescript": "^4.7.4",
-    "semantic-release": "^19.0.3"
+    "typescript": "^4.7.4"
   }
 }
