--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,11 @@
 {
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "ignorePatterns": ["dist/**/*", "jest.config.js"],
+  "ignorePatterns": [
+    "dist/**/*",
+    "jest.config.js",
+    "src/scripts/generate-docs.js"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
