--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,5 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
-      - name: Test Core
-        run: yarn test -t "identity-manager"
-
-      - name: Test FS Driver
-        run: yarn test -t \"fs-storage-driver\"
-
-      - name: Test Mongo Driver
-        run: yarn test -t \"mongo-storage-driver\"
+      - name: Test
+        run: yarn test
