--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint": "^8.19.0",
     "jest": "^28.1.2",
     "jsdoc-to-markdown": "^7.1.1",
+    "mongodb-memory-server": "^8.7.2",
+    "mongoose": "^6.4.3",
     "prettier": "^2.7.1",
     "semantic-release": "^19.0.3",
     "ts-jest": "^28.0.5",
