--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,25 +5,6 @@ on:
     types: [created]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install System Deps
-        run: sudo apt update && sudo apt install libc6
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16.x
-
-      - name: Install Dependencies
-        run: yarn
-
-      - name: Test
-        run: yarn test
-
   test-build:
     runs-on: ${{ matrix.os }}
 
@@ -43,12 +24,9 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
-      - name: Test
-        run: yarn build
-
   release:
     runs-on: ubuntu-latest
-    needs: [test-build, test]
+    needs: [test-build]
 
     steps:
       # Checkout the exact commit tagged on the release.
