feat: core api spec done

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Merul <merul@tanglelabs.io>",
   "license": "GPL-2.0",
   "dependencies": {
+    "@iota/identity-wasm": "^0.6.0",
     "@types/jsdoc-to-markdown": "^7.0.3"
   },
   "scripts": {
