--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "GPL-2.0",
   "dependencies": {
     "@iota/identity-wasm": "^0.6.0",
-    "@types/jsdoc-to-markdown": "^7.0.3"
+    "@types/jsdoc-to-markdown": "^7.0.3",
+    "crypto-js": "^4.1.1"
   },
   "scripts": {
     "build": "tsc; copyfiles -u 1 \"src/**/*.d.ts\" dist;",
@@ -22,6 +23,7 @@
     "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
