--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "license": "GPL-2.0",
   "dependencies": {
     "@iota/identity-wasm": "^0.6.0",
+    "@macfja/serializer": "^1.1.2",
     "@types/jsdoc-to-markdown": "^7.0.3",
+    "class-hydrator": "^1.0.13",
+    "class-transformer": "^0.5.1",
     "crypto-js": "^4.1.1"
   },
   "scripts": {
