--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "noImplicitAny": true,
     "declaration": true,
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "experimentalDecorators": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "src/tests"]
