--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Merul <merul@tanglelabs.io>",
   "license": "GPL-2.0",
   "dependencies": {
-    "@iota/identity-wasm": "^0.6.0",
+    "@iota/identity-wasm": "0.6.0",
     "@macfja/serializer": "^1.1.2",
     "@types/jsdoc-to-markdown": "^7.0.3",
     "class-hydrator": "^1.0.13",
